@@ -19,6 +19,7 @@ package org.kie.dmn.feel.runtime;
 import java.math.BigDecimal;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.junit.runners.Parameterized;
 import org.kie.dmn.api.feel.runtime.events.FEELEvent;
@@ -49,9 +50,9 @@ public class FEEL12ExtendedFunctionsTest extends BaseFEELTest {
                 { "stddev( [ 47 ] )", null, FEELEvent.Severity.ERROR },
                 { "stddev( 47 )", null, FEELEvent.Severity.ERROR },
                 { "stddev( [ ] )", null, FEELEvent.Severity.ERROR },
-                { "mode( 6, 3, 9, 6, 6 )",  Arrays.asList( BigDecimal.valueOf( 6 ) ), null },
+                {"mode( 6, 3, 9, 6, 6 )", List.of(BigDecimal.valueOf(6)), null },
                 { "mode( [6, 1, 9, 6, 1] )",  Arrays.asList(BigDecimal.valueOf( 1 ),  BigDecimal.valueOf( 6 ) ), null },
-                { "mode( [ ] )",  Arrays.asList(  ), null },
+                {"mode( [ ] )", List.of(), null },
         };
         return addAdditionalParameters(cases, false);
     }
