@@ -94,7 +94,7 @@ public class XLS2DMNParser implements DecisionTableParser {
     @Override
     public void parseFile(File file) {
         try {
-            parseWorkbook(removeTrailingExtension(file.getName()), WorkbookFactory.create(file, (String) null, true));
+            parseWorkbook(removeTrailingExtension(file.getName()), WorkbookFactory.create(file, null, true));
         } catch (IOException e) {
             throw new DecisionTableParseException(
                     "Failed to open Excel stream, " + "please check that the content is xls97 format.", e);
@@ -143,7 +143,7 @@ public class XLS2DMNParser implements DecisionTableParser {
             DRGElement drgElem = definitions.getDrgElement().stream().filter(e -> e.getName().equals(sheetName)).findFirst().orElseThrow(() -> new XLS2DMNException("Unable to locate DRG element for sheet: " + sheetName));
             DecisionTable dt = (DecisionTable) ((Decision) drgElem).getExpression();
             DTSheetListener listener = new DTSheetListener(dt, hi);
-            sheetListeners.put(sheetName, Arrays.asList(listener));
+            sheetListeners.put(sheetName, List.of(listener));
         }
         new ExcelParser(sheetListeners).parseWorkbook(workbook);
         DMNMarshaller dmnMarshaller = DMNMarshallerFactory.newDefaultMarshaller();
